Fixed the webcam capture stretch Implemented stub profile picture setup Redirection on camera capture profile picture

--- a/src/components/Shared/WebcamCapture/WebcamCapture.scss
+++ b/src/components/Shared/WebcamCapture/WebcamCapture.scss
@@ -33,7 +33,7 @@
       height: 260px;
       width: 100%;
       background-position: center;
-      background-size: cover;
+      background-size: contain;
       background-repeat: no-repeat;
     }
     .webcam-capture {
